Fixed security issue in sending example file

--- a/app/views/parts/new.html.erb
+++ b/app/views/parts/new.html.erb
@@ -19,7 +19,7 @@
 			<td colspan='2'><%= file_field_tag(:sequence_file)%></td>
 		</tr>
 		<tr>
-			<td colspan='2'>Important: special format required, see <%= link_to 'description', {:action => :get_description_file, :name => 'description.txt', :type => 'text'}, {:style => 'color: #049cdb;'} %></td>
+			<td colspan='2'>Important: special format required, see <%= link_to 'description', {:action => :get_description_file}, {:style => 'color: #049cdb;'} %></td>
 		</tr>
 		<tr>
 			<td colspan='2'>&nbsp;</td>
