--- a/app/views/auto_builds/new.html.erb
+++ b/app/views/auto_builds/new.html.erb
@@ -9,7 +9,7 @@
 	</table>
 	<h5>Or Upload a Fasta File of Protein Sequences:</h5>
 	<%= file_field_tag(:sequence_file)%>
-	<p>Important: special format required, see <%= link_to 'description', {:action => :get_description_file, :name => 'description.txt', :type => 'text'}, {:style => 'color: #049cdb;'} %></p>
+	<p>Important: special format required, see <%= link_to 'description', {:controller => :parts, :action => :get_description_file}, {:style => 'color: #049cdb;'} %></p>
   <br>
 
   <h5> 2. Select one design standard: </h5>
