--- a/app/views/sequences/new.html.erb
+++ b/app/views/sequences/new.html.erb
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><%= f.text_area :accession, :cols => 200, :rows => 10 %></td>
-      <td>One id per line<br>e.g.<br>NP_539626.1<br>NP_459636.1<br>P29929.1</td>
+      <td>One id per line<br />e.g.<br />NP_539626.1<br />NP_459636.1<br />P29929.1</td>
     </tr>
     <tr>
       <td colspan='2'><%= f.submit 'Create Parts' %></td>
